# hmm

./: CMakeLists.txt  README.md
include/libhmm/: libhmm.hpp
src/: CMakeLists.txt  libhmm.cpp
src/include/libhmm/: libhmm.hpp
test/: CMakeLists.txt
tools/: CMakeLists.txt  hmm.cpp
